--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,21 @@
 <resources>
     <string name="app_name">ToDoApp</string>
+    <string name="settings">Settings</string>
+    <string name="mode">Mode</string>
+    <string name="language">Language</string>
+    <string name="add_new_task">Add New Task</string>
+    <string name="enter_your_task">Enter Your Task</string>
+    <string name="enter_description">Enter Description</string>
+    <string name="select_date">Select date</string>
+
+    <string-array name="languages">
+        <item>English</item>
+        <item>Arabic</item>
+    </string-array>
+
+    <string-array name="mode">
+        <item>Light Mode</item>
+        <item>Dark Mode</item>
+    </string-array>
+    <string name="title_activity_edit">EditActivity</string>
 </resources>
